--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head> 
         <meta charset="UTF-8">
         <title> Os Fatui</title>
+        <link rel="stylesheet" href= "style.css">
 
  <style>
-     p{
-        text-align: center
-     }
+     
  </style>
 
   </head>
