--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   
         <h1 style="text-align: center"> Sobre os Fatui </h1>
 
-        <p style="font-size: 20px"; style="text-align: center"> <strong> Os Fatui </strong> (singular Fatuus) são uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
+        <p style="font-size: 20px"; style="text-align: center"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
+        
+        <p style="text-align: center">são uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
 
         <p style="text-align: center"> Há também um destacamento militar liderado pelos Onze Mensageiros dos Fatui e pela própria Tsaritsa. </p>
 
-        <p style="text-align: center"> <em> São uma das principais facções antagônicas em Genshin Impact.</em> </p>
+        <p style="text-align: center"> São uma das principais facções antagônicas em Genshin Impact. </p>
      
         <p style="text-align: center"> Eles também são os principais antagonistas no Mangá. </p>
  
