--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
         <title> Os Fatui</title>
         <link rel="stylesheet" href= "style.css">
 
- <style>
+        <style>
      
- </style>
-
+        </style>
   </head>
   
   <body>
   
-        <h1 style="text-align: center"> Sobre os Fatui </h1>
+        <h1 style="text-align: center; backgroud: #CCCCCC"> Sobre os Fatui </h1>
 
         <p style="font-size: 20px"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
         
