--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
   
-        <h1 style="text-align: center; background: #CCCCCC"> Sobre os Fatui </h1>
+        <h1 style="text-align: center"> Sobre os Fatui </h1>
 
         <p style="font-size: 20px"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
         
