--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
   <body>
   
-        <h1 style="text-align: center"> Sobre os Fatui </h1>
+        <h1> Sobre os Fatui </h1>
 
-        <p style="font-size: 20px"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
+        <p id="missao"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
         
         <p>são uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
 
