--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
         <h1> Sobre os Fatui </h1>
 
-        <p id="missao"> <strong> <em> Os Fatui </em> </strong> (singular Fatuus) </p>
+        <p id="missao"> <em> <strong> Os Fatui </em> </strong> (singular Fatuus) </p>
         
         <p>são uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
 
