--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
      
         <p> Eles também são os principais antagonistas no Mangá. </p>
  
-        <img src="mensageiros.png">
+        <img id="mensageiros" src="mensageiros.png">
     </body>
 </html>
