--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
         <p> São uma das principais facções antagônicas em Genshin Impact. </p>
      
         <p> Eles também são os principais antagonistas no Mangá. </p>
- 
+
+        <h2>Harbingers</h2>
+        
+
+        <ul> 
+            Pierro - "The Jester"
+            Columbina - "Damselette"
+            Pulcinella - "The Rooster"
+            Scaramouche - "Balladeer"
+            La Signora - "The Fair Lady"
+            Pantalone - "Regrator"
+            Tartaglia - "Childe"
+            Il Dottore - "The Doctor"
+            Il Capitano -  "The Captain"
+            Sandrone - "Marionette"
+            Arlecchino - "The Knave" 
+        </ul>
+
         <img id="mensageiros" src="mensageiros.png">
     </body>
 </html>
