--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         
 
         <ul> 
-            Pierro - "The Jester"
-            Columbina - "Damselette"
-            Pulcinella - "The Rooster"
-            Scaramouche - "Balladeer"
-            La Signora - "The Fair Lady"
-            Pantalone - "Regrator"
-            Tartaglia - "Childe"
-            Il Dottore - "The Doctor"
-            Il Capitano -  "The Captain"
-            Sandrone - "Marionette"
-            Arlecchino - "The Knave" 
+            <li>Pierro - "The Jester"</li>
+            <li>Columbina - "Damselette"</li>
+            <li>Pulcinella - "The Rooster"</li>
+            <li>Scaramouche - "Balladeer"</li>
+            <li>La Signora - "The Fair Lady"</li>
+            <li>Pantalone - "Regrator"</li>
+            <li>Tartaglia - "Childe"</li>
+            <li>Il Dottore - "The Doctor"</li>
+            <li>Il Capitano -  "The Captain"</li>
+            <li> Sandrone - "Marionette"</li>
+            <li>Arlecchino - "The Knave" </li>
         </ul>
 
         <img id="mensageiros" src="mensageiros.png">
