--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         
 
         <ul> 
-            <li>Pierro - "The Jester"</li>
-            <li>Columbina - "Damselette"</li>
-            <li>Pulcinella - "The Rooster"</li>
-            <li>Scaramouche - "Balladeer"</li>
-            <li>La Signora - "The Fair Lady"</li>
-            <li>Pantalone - "Regrator"</li>
-            <li>Tartaglia - "Childe"</li>
-            <li>Il Dottore - "The Doctor"</li>
-            <li>Il Capitano -  "The Captain"</li>
-            <li> Sandrone - "Marionette"</li>
-            <li>Arlecchino - "The Knave" </li>
+            <li class="itens">Pierro - "The Jester"</li>
+            <li class="itens">Columbina - "Damselette"</li>
+            <li class="itens">Pulcinella - "The Rooster"</li>
+            <li class="itens">Scaramouche - "Balladeer"</li>
+            <li class="itens">La Signora - "The Fair Lady"</li>
+            <li class="itens">Pantalone - "Regrator"</li>
+            <li class="itens">Tartaglia - "Childe"</li>
+            <li class="itens">Il Dottore - "The Doctor"</li>
+            <li class="itens">Il Capitano -  "The Captain"</li>
+            <li class="itens"> Sandrone - "Marionette"</li>
+            <li class="itens">Arlecchino - "The Knave" </li>
         </ul>
 
         <img id="mensageiros" src="mensageiros.png">
