--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <img id="mensageiros" src="mensageiros.png">
         </div>
 
-        <div>
+        <div class="Harbingers"> 
             <h2>Harbingers</h2>
-            
+
             <ul> 
                 <li class="itens">Pierro - "The Jester"</li>
                 <li class="itens">Columbina - "Damselette"</li>
