--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-        <div>
+        <div class="Principal">
             <h1> Sobre os Fatui </h1>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong> (singular Fatuus) </p>
