--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <li class="itens">Sandrone - "Marionette"</li>
                 <li class="itens">Arlecchino - "The Knave" </li>
             </ul>
+
+            <img src="roda.jpg">
         </div>
     </body>
 </html>
