--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="itens">Arlecchino - "The Knave" </li>
             </ul>
 
-            <img src="roda.png">
+            <img src="roda.png" class="ordem">
         </div>
     </body>
 </html>
