--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
             
-            <p>são uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
+            <p>São uma delegação de diplomatas do Palácio Zapolyarny de Snezhnaya. </p>
 
             <p> Há também um destacamento militar liderado pelos Onze Mensageiros dos Fatui e pela própria Tsaritsa. </p>
 
@@ -24,7 +24,7 @@
         </div>
 
         <div class="Harbingers"> 
-            <h2>Harbingers</h2>
+            <h2 id="sao">Harbingers</h2>
 
             <ul> 
                 <li class="itens">Pierro - "The Jester"</li>
