--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
   
   <body>
-        <div class="Principal">
-            <h1> Sobre os Fatui </h1>
+    <header>
+        <h1> Fatui </h1>
+    </header>
+        <div> class="Principal">
+            <h2> Sobre os Fatui </h2>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
             
@@ -24,7 +27,7 @@
         </div>
 
         <div class="Harbingers"> 
-            <h2 id="sao">Harbingers</h2>
+            <h3 id="sao">Harbingers</h3>
 
             <ul> 
                 <li class="itens">Pierro - "The Jester"</li>
