--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1> Fatui </h1>
     </header>
-        <div> class="Principal">
+        <div class="Principal">
             <h2> Sobre os Fatui </h2>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
