--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1> Fatui </h1>
     </header>
         <div class="Principal">
-            <h2> Sobre os Fatui </h2>
+            <h2 id="titulo"> Sobre os Fatui </h2>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
             
@@ -27,7 +27,7 @@
         </div>
 
         <div class="Harbingers"> 
-            <h3 id="sao">Harbingers</h3>
+            <h3 id="titulo" id="sao">Harbingers</h3>
 
             <ul> 
                 <li class="itens">Pierro - "The Jester"</li>
