--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-        <h1> Fatui </h1>
+        <h1> Mensageiros Fatui </h1>
     </header>
         <div class="Principal">
             <h2 id="titulo"> Sobre os Fatui </h2>
