--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         </div>
     </body>
 </html>
-<img src="insignia fatui1.jpeg" width="17%">
+<img src="insignia fatui1.jpeg" class="jorge">
 <img src="insignia2.jpeg">
 <img src="insignia3.jpeg">
