--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     </head>
         <body>
         <header>
-            <h1><img src="logo.png" class="jobo"></h1>
+            <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
             <ul>
                 <li><a href="index.html"></a> Home</li>
