--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
             <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
             <ul>
-                <li><a href="index.html"></a> Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>Produtos</li>
                 <li>Contato</li>
              </ul>
