--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <header>
-        <h1> Mensageiros Fatui </h1>
+        <h1> <img src="FatuiLogo.png" class="jobo">  Mensageiros Fatui </h1>
     </header>
         <div class="Principal">
             <h2 id="titulo"> Sobre os Fatui </h2>
