--- a/produtos.html
+++ b/produtos.html
@@ -10,11 +10,13 @@
         <header>
             <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-             </ul>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>    
            </header>
         </body>
 </html>
