--- a/produtos.html
+++ b/produtos.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title> Comércio - Fatui </title>
+        
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtos.css">
     </head>
     
