--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
   </head>
   
   <body>
-    <header class="navegação">
-        <div class="caixa">
-            
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <header>
-        <h1> <img src="FatuiLogo.png" class="jobo">  Mensageiros Fatui </h1>
-    </header>
+        <h1><img src="FatuiLogo.png" class="jobo"></h1>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>    
+       </header>
+
         <div class="Principal">
             <h2 id="titulo"> Sobre os Fatui </h2>
 
