--- a/produtos.html
+++ b/produtos.html
@@ -10,15 +10,17 @@
     
         <body>
         <header>
-            <h1><img src="FatuiLogo.png" class="jobo"></h1>
+            <div class="caixa">
+                <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>    
-           </header>
-        </body>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>    
+        </header>
+    </body>
 </html>
