--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
         <body>
         <header>
+        <div>
             <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
         <nav>
@@ -17,7 +18,8 @@
                 <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
-        </nav>    
+        </nav>
+        </div>    
        </header>
 
         <div class="Principal">
