--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   
         <body>
         <header>
-        <div>
-            <h1><img src="FatuiLogo.png" class="jobo"></h1>
+            <div  class="caixa">
+                    <h1><img src="FatuiLogo.png" class="jobo"></h1>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-        </div>    
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>    
        </header>
 
         <div class="Principal">
