--- a/produtos.html
+++ b/produtos.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtos.css">
     </head>
-    
-        <body>
+    <body>
         <header>
             <div class="caixa">
                 <h1><img src="FatuiLogo.png" class="jobo"></h1>
@@ -22,5 +21,82 @@
                 </nav>
             </div>    
         </header>
+
+        <main>
+            <ul>
+                <li>
+                    <h2>Combo - The Jester</h2>
+                    <img src="Pierro.png"> 
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - The Doctor</h2>
+                    <img src="Dottore.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Damslette</h2>
+                    <img src="Columbina.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - The Captain</h2>
+                    <img src="Capitano.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - The Rooster</h2>
+                    <img src="Pulcinella.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Balladeer</h2>
+                    <img src="Scaramouche.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - The Knave</h2>
+                    <img src="Arlecchino.png"> 
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - The Fair Lady</h2>
+                    <img src="Signora.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Pantalone</h2>
+                    <img src="Pantalone.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Sandrone</h2>
+                    <img src="Sandrone.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Childe</h2>
+                    <img src="Childe.png">
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Combo - Tsaritsa</h2>
+                    <img src="tsaritsa.png">
+                    <p></p>
+                    <p></p>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
