--- a/produtos.html
+++ b/produtos.html
@@ -23,76 +23,76 @@
         </header>
 
         <main>
-            <ul class="Arrumar">
+            <ul>
                 <li>
                     <h2>Combo - The Jester</h2>
-                    <img src="Pierro.png"> 
+                    <img src="Pierro.png" class="Arrumar"> 
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - The Doctor</h2>
-                    <img src="Dottore.png">
+                    <img src="Dottore.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Damslette</h2>
-                    <img src="Columbina.png">
+                    <img src="Columbina.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - The Captain</h2>
-                    <img src="Capitano.png">
+                    <img src="Capitano.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - The Rooster</h2>
-                    <img src="Pulcinella.png">
+                    <img src="Pulcinella.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Balladeer</h2>
-                    <img src="Scaramouche.png">
+                    <img src="Scaramouche.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - The Knave</h2>
-                    <img src="Arlecchino.png"> 
+                    <img src="Arlecchino.png" class="Arrumar"> 
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - The Fair Lady</h2>
-                    <img src="Signora.png">
+                    <img src="Signora.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Pantalone</h2>
-                    <img src="Pantalone.png">
+                    <img src="Pantalone.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Sandrone</h2>
-                    <img src="Sandrone.png">
+                    <img src="Sandrone.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Childe</h2>
-                    <img src="Childe.png">
+                    <img src="Childe.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
                 <li>
                     <h2>Combo - Tsaritsa</h2>
-                    <img src="tsaritsa.png">
+                    <img src="tsaritsa.png" class="Arrumar">
                     <p></p>
                     <p></p>
                 </li>
