--- a/produtos.html
+++ b/produtos.html
@@ -28,73 +28,73 @@
                     <h2>Combo - The Jester</h2>
                     <img src="Pierro.png" class="Arrumar"> 
                     <p> Pierro, o 1° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$20.000</p>
                 </li>
                 <li>
                     <h2>Combo - The Doctor</h2>
                     <img src="Dottore.png" class="Arrumar">
                     <p> Il Dottore, o 2° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - Damslette</h2>
                     <img src="Columbina.png" class="Arrumar">
                     <p>Columbina, a 3° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - The Captain</h2>
                     <img src="Capitano.png" class="Arrumar">
                     <p>Capitano, o 4° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - The Rooster</h2>
                     <img src="Pulcinella.png" class="Arrumar">
                     <p>Pulcinella, o 5° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - Balladeer</h2>
                     <img src="Scaramouche.png" class="Arrumar">
                     <p>Scaramouche, o 6° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - The Knave</h2>
                     <img src="Arlecchino.png" class="Arrumar"> 
                     <p>Arlecchino, a 7° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - The Fair Lady</h2>
                     <img src="Signora.png" class="Arrumar">
                     <p>La Signora, a 8° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>FORA DE ESTOQUE</p>
                 </li>
                 <li>
                     <h2>Combo - Regrator</h2>
                     <img src="Pantalone.png" class="Arrumar">
                     <p>Pantalone, o 9° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - Marionette</h2>
                     <img src="Sandrone.png" class="Arrumar">
                     <p>Sandrone, a 10° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - Tartaglia</h2>
                     <img src="Childe.png" class="Arrumar">
                     <p>Childe, o 11° dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$15.000</p>
                 </li>
                 <li>
                     <h2>Combo - Tsaritsa</h2>
                     <img src="tsaritsa.png" class="Arrumar">
                     <p>Tsaritsa, a Arconte do elemento Cryo, líder da nação de Snezhnaya e mandante dos Mensageiros Fatui</p>
-                    <p></p>
+                    <p>$100.000</p>
                 </li>
             </ul>
         </main>
