--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
         </header>
 
         <main>
-            <ul>
+            <ul class="produtos">
                 <li>
                     <h2>Combo - The Jester</h2>
                     <img src="Pierro.png" class="Arrumar"> 
