--- a/produtos.html
+++ b/produtos.html
@@ -70,7 +70,7 @@
                     <h2>Combo - The Fair Lady</h2>
                     <img src="Signora.png" class="Arrumar">
                     <p class="produto-descricao">La Signora, a 8° dos Mensageiros Fatui</p>
-                    <p class="produto-preco">*FORA DE ESTOQUE!!!*</p>
+                    <p class="produto-preco">FORA DE ESTOQUE!!!</p>
                 </li>
                 <li>
                     <h2>Combo - Regrator</h2>
