--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
                 <li>
                     <h2>Combo - The Jester</h2>
                     <img src="Pierro.png" class="Arrumar"> 
-                    <p > Pierro, o 1° dos Mensageiros Fatui</p>
+                    <p class="produto-descricao"> Pierro, o 1° dos Mensageiros Fatui</p>
                     <p  class="produto-preco">$20.000,00</p>
                 </li>
                 <li>
