--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
        </header>
 
         <div class="Principal">
+           
+        <margin>20px</margin>
             <h2 id="titulo"> Sobre os Fatui </h2>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
@@ -34,6 +36,8 @@
             <p> São uma das principais facções antagônicas em Genshin Impact. </p>
         
             <p> Eles também são os principais antagonistas no Mangá. </p>
+
+        <marin>20px</marin>
 
             <img id="mensageiros" src="mensageiros.png">
         </div>
