--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="Harbingers"> 
-            <h3 id="titulo" id="sao">Harbingers</h3>
+            <h3 id="titulo" id="sao" class="oque">Harbingers</h3>
 
             <ul> 
                 <li class="itens">Pierro - "The Jester"</li>
