--- a/produtos.html
+++ b/produtos.html
@@ -98,5 +98,10 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <p>©Copyright Genshin Impact, COGNOSPHERE PTE. LTD 2020-2022</p>
+            <background><img src="FundoCinza.jpg"></background>
+        </footer>
     </body>
 </html>
