--- a/produtos.html
+++ b/produtos.html
@@ -23,6 +23,7 @@
         </header>
 
         <main>
+            <link rel="stylesheet" href="reset.css">
             <ul class="produtos">
                 <li>
                     <h2>Combo - The Jester</h2>
