--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="Harbingers"> 
             <h3 id="titulo" id="sao" class="oque">Harbingers</h3>
 
-            <ul> 
+            <ul class="vida"> 
                 <li class="itens">Pierro - "The Jester"</li>
                 <li class="itens">Columbina - "Damselette"</li>
                 <li class="itens">Pulcinella - "The Rooster"</li>
