--- a/produtos.html
+++ b/produtos.html
@@ -102,6 +102,7 @@
 
         <footer>
             <p>©Copyright Genshin Impact, COGNOSPHERE PTE. LTD 2020-2022</p>
+            <img src="footer logo.png">
         </footer>
     </body>
 </html>
