--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="Principal">
            
         <margin>20px</margin>
-            <h2 id="titulo" class="Gorou"> Sobre os Fatui </h2>
+            <h2 id="titulo" class="Gorou"> Sobre </h2>
 
             <p id="missao"><em> <strong> Os Fatui </em> </strong></p>
             
