--- a/contato.html
+++ b/contato.html
@@ -22,4 +22,11 @@
             </div>    
         </header>
 
-        
+        <main></main>
+
+        <footer>
+            <img src="footer logo.png">
+            <p>©Copyright Genshin Impact, COGNOSPHERE PTE. LTD 2020-2022</p>
+        </footer>
+    </body>
+</html>
