--- a/contato.html
+++ b/contato.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title> Comércio - Fatui </title>
+        <title> Contato - Fatui </title>
 
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -22,7 +22,20 @@
             </div>    
         </header>
 
-        <main></main>
+        <main>
+            <form>
+                <label for="codenome"> Nome/Codenome </label>
+                <input type="text" id="codenome"">
+
+                <label for="email"> Email</label>
+                <input type="text" id="email">
+            
+                <label for="telefone"> Telefone </label>    
+                <input type="text" id="telefone">
+
+                <input type="submit" value="Enviar  Formulário">
+            </form>
+        </main>
 
         <footer>
             <img src="footer logo.png">
