--- a/produtos.html
+++ b/produtos.html
@@ -98,6 +98,7 @@
                     <p class="produto-preco">$100.000,00</p>
                 </li>
             </ul>
+            <background> <img src="FundoVinho.jpg"> </background>
         </main>
 
         <footer>
