--- a/contato.html
+++ b/contato.html
@@ -34,6 +34,9 @@
                 <input type="text" id="telefone">
 
                 <input type="submit" value="Enviar  Formulário">
+
+                <textarea cols="30" rows="10"> </textarea>
+
             </form>
         </main>
 
