--- a/contato.html
+++ b/contato.html
@@ -25,24 +25,24 @@
         <main id="crl">
             <form>
                 <label for="codenome"> Nome/Codenome </label>
-                <input type="text" id="codenome" class="eunaoqueromais">
+                <input type="text" id="codenome" class="input-padrao">
 
                 <label for="email"> Email</label>
-                <input type="text" id="email" class="eunaoqueromais">
+                <input type="text" id="email" class="input-padrao">
             
                 <label for="telefone"> Telefone </label>    
-                <input type="text" id="telefone" class="eunaoqueromais">
+                <input type="text" id="telefone" class="input-padrao">
 
                 <label for="mensagem"> Mensagem </label>
-                <textarea cols="70" rows="10" id="mensagem" class="eunaoqueromais"> </textarea>
+                <textarea cols="70" rows="10" id="mensagem" class="input-padrao"> </textarea>
 
                 <div>
                     <p>Por onde prefer nosso contato?</p>
-                    <label for="porra"><input type="radio" name="contato" value="email" id="porra">Email</label>
+                    <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
                     
-                    <label for="puta"><input type="radio" name="contato" value="telefone" id="puta">Telefone</label>
+                    <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
 
-                    <label for="quenga"><input type="radio" name="contato" value="discord" id="quenga">Discord</label>
+                    <label for="radio-discord"><input type="radio" name="contato" value="discord" id="radio-discord">Discord</label>
                 </div>
 
                 <label><input type="checkbox"> Gostaria de receber novidades pelo seu Terminal Akasha? </label>
