--- a/contato.html
+++ b/contato.html
@@ -45,7 +45,7 @@
                     <label for="radio-discord"><input type="radio" name="contato" value="discord" id="radio-discord">Discord</label>
                 </div>
 
-                <label><input type="checkbox"> Gostaria de receber novidades pelo seu Terminal Akasha? </label>
+                <label class="checkbox"><input type="checkbox"> Gostaria de receber novidades pelo seu Terminal Akasha? </label>
 
                 <input type="submit" value="Enviar  Formulário">
             </form>
