--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
             </div>    
         </header>
 
-        <main id="crl">
+        <main>
             <form>
                 <label for="codenome"> Nome/Codenome </label>
                 <input type="text" id="codenome" class="input-padrao">
@@ -45,6 +45,14 @@
                     <label for="radio-discord"><input type="radio" name="contato" value="discord" id="radio-discord">Discord</label>
                 </div>
 
+                <div>
+                    <p>Qual horário estaria disponível?</p>
+                    <select>
+                        <option>Manhã</option>
+                        <option>Tarde</option>
+                        <option>Noite</option>
+
+                </div>
                 <label class="checkbox"><input type="checkbox"> Gostaria de receber novidades pelo seu Terminal Akasha? </label>
 
                 <input type="submit" value="Enviar  Formulário">
