--- a/produtos.html
+++ b/produtos.html
@@ -22,7 +22,7 @@
             </div>    
         </header>
 
-        <main id="verme">
+        <main class="verme">
             <link rel="stylesheet" href="reset.css">
             <ul class="produtos">
                 <li>
